INCLUDE_DIRECTORIES(..)

ADD_EXECUTABLE(Tucker_IO_test Tucker_IO_test.cpp)
TARGET_LINK_LIBRARIES(Tucker_IO_test serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_shift_scale_test Tucker_shift_scale_test.cpp)
TARGET_LINK_LIBRARIES(Tucker_shift_scale_test serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_eig_test Tucker_eig_test.cpp)
TARGET_LINK_LIBRARIES(Tucker_eig_test serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_norm_test Tucker_norm_test.cpp)
TARGET_LINK_LIBRARIES(Tucker_norm_test serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_normalize_test Tucker_normalize_test.cpp)
TARGET_LINK_LIBRARIES(Tucker_normalize_test serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_reconstruct_test Tucker_reconstruct_test.cpp)
TARGET_LINK_LIBRARIES(Tucker_reconstruct_test serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_reconstruct_test2 Tucker_reconstruct_test2.cpp)
TARGET_LINK_LIBRARIES(Tucker_reconstruct_test2 serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_gram_test_file Tucker_gram_test_file.cpp)
TARGET_LINK_LIBRARIES(Tucker_gram_test_file serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_gram_test_nofile Tucker_gram_test_nofile.cpp)
TARGET_LINK_LIBRARIES(Tucker_gram_test_nofile serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_ttm_test_file Tucker_ttm_test_file.cpp)
TARGET_LINK_LIBRARIES(Tucker_ttm_test_file serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_ttm_test_nofile Tucker_ttm_test_nofile.cpp)
TARGET_LINK_LIBRARIES(Tucker_ttm_test_nofile serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_slice_test_file Tucker_slice_test_file.cpp)
TARGET_LINK_LIBRARIES(Tucker_slice_test_file serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(Tucker_slice_test_nofile Tucker_slice_test_nofile.cpp)
TARGET_LINK_LIBRARIES(Tucker_slice_test_nofile serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})


ENABLE_TESTING()
ADD_TEST(Tucker_noscale_fullrec_test ${CMAKE_CURRENT_BINARY_DIR}/Tucker_noscale_fullrec.py)
ADD_TEST(Tucker_serial_IO_test ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_IO_test)
ADD_TEST(Tucker_serial_shift_scale_test ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_shift_scale_test)
ADD_TEST(Tucker_serial_eig_test ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_eig_test)
ADD_TEST(Tucker_serial_norm_test ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_norm_test)
ADD_TEST(Tucker_serial_normalize_test ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_normalize_test)
ADD_TEST(Tucker_serial_reconstruct_test ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_reconstruct_test)
ADD_TEST(Tucker_serial_reconstruct_test2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_reconstruct_test2)
ADD_TEST(Tucker_serial_gram_test_nofile ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_gram_test_nofile)
ADD_TEST(Tucker_serial_gram_test_file ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_gram_test_file)
ADD_TEST(Tucker_serial_ttm_test_file ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_ttm_test_file)
ADD_TEST(Tucker_serial_ttm_test_nofile ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_ttm_test_nofile)
ADD_TEST(Tucker_serial_slice_test_file ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_slice_test_file)
ADD_TEST(Tucker_serial_slice_test_nofile ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/Tucker_slice_test_nofile)

SET_PROPERTY(TEST Tucker_noscale_fullrec_test PROPERTY LABELS SystemTest LongTest)
SET_PROPERTY(TEST Tucker_serial_shift_scale_test PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST Tucker_serial_eig_test PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST Tucker_serial_norm_test PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST Tucker_serial_normalize_test PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST Tucker_serial_gram_test_nofile PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST Tucker_serial_gram_test_file PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST Tucker_serial_ttm_test_file PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST Tucker_serial_ttm_test_nofile PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST Tucker_serial_slice_test_file PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST Tucker_serial_slice_test_nofile PROPERTY LABELS UnitTest)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/input_files)
FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/output_files)
FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Tucker_noscale_fullrec.py" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/5x5.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_ss0.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_ss1.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_ss2.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_ss3.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x2.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x2_mult_transp.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/4x3.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/4x3_mult.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/5x8.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/5x8_mult_transp.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/2x5.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/2x5_mult.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/7x1.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/7x1_mult_transp.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/1x7.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/1x7_mult.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/11x25.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/11x25_mult_transp.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/17x11.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/17x11_mult.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_mm0.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_mm2.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_sc0.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_sc2.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_mm1.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_mm3.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_sc1.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_sc3.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")

FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/system/serial_noscale_fullrec" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/system")
FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/input_files/system/serial_noscale_fullrec/sthosvd/compressed)
